src/objects/ADvendio__CampaignItemRevenueSplit__c.object
<CustomObject>
    <description>This object stores all information used to calculate a sales revenue split. Records get automatically created by an apex job if the forecast and team member splits are defined.</description>
    <fields>
        <fullName>ADvendio__AdvertiserAgencyRelation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Advertiser-Agency Relation selected in the related media campaign</description>
        <label>Advertiser-Agency Relation</label>
        <referenceTo>ADvendio__Advertiser_Agency_relation__c</referenceTo>
        <relationshipLabel>Campaign Item Revenue Splits</relationshipLabel>
        <relationshipName>CampaignItemRevenueSplits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Advertiser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Advertiser selected in the related media campaign</description>
        <label>Advertiser</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Item Revenue Splits (Advertiser)</relationshipLabel>
        <relationshipName>CampaignItemRevenueSplitsAdvertiser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agency selected in the related media campaign</description>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Item Revenue Splits (Agency)</relationshipLabel>
        <relationshipName>CampaignItemRevenueSplitsAgency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__AmountWeighted__c</fullName>
        <description>Amount weighted - multiplied by the media campaigns propability</description>
        <formula>ADvendio__CampaignItem__r.ADvendio__Media_Campaign__r.ADvendio__Propability__c * ADvendio__Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount (weighted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount__c</fullName>
        <description>Calculated based on the amount of the referenced campaign item</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__CampaignItem__c</fullName>
        <description>Referencing the campaign Item to be split</description>
        <label>Campaign Item</label>
        <referenceTo>ADvendio__Campaign_Item__c</referenceTo>
        <relationshipLabel>Campaign Item Revenue Splits</relationshipLabel>
        <relationshipName>CampaignItemRevenueSplits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Forecast__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>links to Forecast record with matching
- Advertiser-Agency-Relation
- Site
- Sales-Rep</description>
        <label>Forecast No.</label>
        <referenceTo>ADvendio__Forecast__c</referenceTo>
        <relationshipLabel>Campaign Item Revenue Splits</relationshipLabel>
        <relationshipName>CampaignItemRevenueSplits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Media__c</fullName>
        <description>Campaign Item&apos;s Site&apos;s Media</description>
        <label>Media</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PageEquivalency__c</fullName>
        <description>Print only: Page equivalency which is entered on the campaign item split by team members</description>
        <label>Single Product Page Equivalency</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__PublicationDate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Publication Date of campaign item</description>
        <label>Publication Date</label>
        <referenceTo>ADvendio__PublicationDate__c</referenceTo>
        <relationshipLabel>Campaign Item Revenue Splits</relationshipLabel>
        <relationshipName>CampaignItemRevenueSplits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__SalesRepresentative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales Representative listed in the media campaign team member list</description>
        <label>Sales Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CampaignItemRevenueSplits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Site referenced in the campaign item</description>
        <label>Site</label>
        <referenceTo>ADvendio__Site__c</referenceTo>
        <relationshipLabel>Campaign Item Revenue Splits</relationshipLabel>
        <relationshipName>CampaignItemRevenueSplits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>Unique Key used by system internally</description>
        <externalId>true</externalId>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Campaign Item Revenue Split</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RS-{00000}</displayFormat>
        <label>Revenue Split</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Item Revenue Splits</pluralLabel>
    <recordTypes>
        <fullName>ADvendio__PublisherGoal</fullName>
        <active>true</active>
        <label>Publisher Goal</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__SalesGoal</fullName>
        <active>true</active>
        <label>Sales Goal</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>